--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
 
 <body class="mat-typography">
     <app-root></app-root>
+    <script type="text/javascript" src="http://localhost:9024/schemeMaster_micro-fe.js"></script>
+
 </body>
 
 </html>
