--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,7 @@
 
 <body class="mat-typography">
     <app-root></app-root>
-    <script type="text/javascript" src="http://localhost:9024/schemeMaster_micro-fe.js"></script>
-
+    <!-- <script type="text/javascript" src="http://localhost:9025/schemeMaster_micro-fe.js"></script> -->
 </body>
 
 </html>
